--- a/infra/app/supervisor-app.conf
+++ b/infra/app/supervisor-app.conf
@@ -32,3 +32,15 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php artisan queue:work
+autostart=true
+autorestart=true
+numprocs=2
+startsecs=0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
