デプロイ環境のDB設定などを追加

--- a/app/.env.example
+++ b/app/.env.example
@@ -55,6 +55,6 @@ PUSHER_APP_CLUSTER=mt1
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://local-template.net:54480/auth/google/callback
+GOOGLE_REDIRECT_URI=http://local-laravel-job-test.net:54480/auth/google/callback
 
 IS_SYSTEM_MAINTENANCE=0
