--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
-APP_URL=http://local-template.net:54480
+APP_URL=http://local-laravel-job-test.net:54480
 
-VITE_SERVER_HOST=local-template.net
+VITE_SERVER_HOST=local-laravel-job-test.net
 VITE_SERVER_PORT=54473
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
