pubsubをキューにする設定を追加

--- a/app/.env.local
+++ b/app/.env.local
@@ -1,4 +1,4 @@
-APP_NAME=template
+APP_NAME=laravel_job_test
 APP_ENV=local
 APP_KEY=base64:SwEf6A5StOxWUkDiXL7Y6A+S4kp+WHCq77l00t8a2Bo=
 APP_DEBUG=true
@@ -8,19 +8,17 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#DB_CONNECTION=sqlite
-#DB_DATABASE=/app/database/sqlite/database.sqlite
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=template
-DB_USERNAME=template_user
+DB_DATABASE=mjtak_sandbox
+DB_USERNAME=mjtak_sandbox_user
 DB_PASSWORD="p2Z76!3H"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=pubsub
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -56,5 +54,10 @@ PUSHER_APP_CLUSTER=mt1
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://local-laravel-job-test.net:54480/auth/google/callback
+GOOGLE_CLOUD_PROJECT_ID=mjtak-sandbox
+GOOGLE_APPLICATION_CREDENTIALS=/app/resources/keys/application_default_credentials.json
+
+PUBSUB_QUEUE=laravel-queue-pubsub
+PUBSUB_PROJECT_ID=mjtak-sandbox
 
 IS_SYSTEM_MAINTENANCE=0
