--- a/app/.env.develop
+++ b/app/.env.develop
@@ -53,4 +53,13 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_APPLICATION_CREDENTIALS=
+
+PUBSUB_QUEUE=
+PUBSUB_PROJECT_ID=
+
 IS_SYSTEM_MAINTENANCE=0
