--- a/app/.env.example
+++ b/app/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=template
+APP_NAME=laravel_job_test
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://local-laravel-job-test.net:54480
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -20,7 +20,7 @@ DB_DATABASE=/app/database/sqlite/database.sqlite
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=pubsub
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -56,5 +56,10 @@ PUSHER_APP_CLUSTER=mt1
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://local-laravel-job-test.net:54480/auth/google/callback
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_APPLICATION_CREDENTIALS=
+
+PUBSUB_QUEUE=
+PUBSUB_PROJECT_ID=
 
 IS_SYSTEM_MAINTENANCE=0
