--- a/app/composer.json
+++ b/app/composer.json
@@ -12,6 +12,7 @@
     "ext-pdo": "*",
     "doctrine/dbal": "^3.6",
     "guzzlehttp/guzzle": "^7.5",
+    "kainxspirits/laravel-pubsub-queue": "^0.8.0",
     "laravel/framework": "^10.0",
     "laravel/sanctum": "^3.2",
     "laravel/socialite": "^5.6",
