--- a/app/.env.local
+++ b/app/.env.local
@@ -2,7 +2,7 @@ APP_NAME=laravel_job_test
 APP_ENV=local
 APP_KEY=base64:SwEf6A5StOxWUkDiXL7Y6A+S4kp+WHCq77l00t8a2Bo=
 APP_DEBUG=true
-APP_URL=http://local-laravel-job-test.net:54480
+APP_URL=http://localhost:54480
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -53,7 +53,7 @@ PUSHER_APP_CLUSTER=mt1
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://local-laravel-job-test.net:54480/auth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:54480/auth/google/callback
 GOOGLE_CLOUD_PROJECT_ID=mjtak-sandbox
 GOOGLE_APPLICATION_CREDENTIALS=/app/resources/keys/application_default_credentials.json
 
